--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 @import url(styles/header.css);
 @import url(styles/banner.css);
 @import url(styles/carrosel.css);
@@ -13,7 +14,10 @@
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: 'Poppins', sans-serif;
     --azul: #002F52;
-    
+    --fonte-secundario: 'Josefin Sans', sans-serif;
+    --preto: #000000;
+    --cinza: #858585;
+    --cinza-escuro: #474746;
 }
 
 body {
