--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -6,3 +6,73 @@ hr {
     background-color: var(--branco);
     padding: 1em;
 }
+
+.rodapé__tablet {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .rodapé__titulo {
+        display: none;
+    }
+
+    .rodapé__tablet {
+        display: flex;
+        justify-content: space-between;
+        padding: 2.5em 1.5em;
+    }
+
+    .rodapé__titulo-tablet {
+        display: inline-block;
+        width: 20vw;
+        font-size: 24px;
+        font-family: var(--fonte-principal);
+        font-weight: 400;
+        color: var(--preto);
+    }
+
+    .lista-rodapé__educação {
+        display: flex;
+        flex-direction: column;
+        width: 21vw;
+        gap: 15px;
+    }
+
+    .lista-rodapé__educação-online {
+        display: flex;
+        flex-direction: column;
+        width: 21vw;
+        gap: 15px;
+    }
+
+    .lista-rodapé__comunidade {
+        display: flex;
+        flex-direction: column;
+        width: 21vw;
+        gap: 15px;
+    }
+
+    .item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .item-titulo {
+        font-size: 14px;
+        font-family: var(--fonte-principal);
+        font-weight: 400;
+        color: var(--cinza);
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+
+    .item a {
+        text-decoration: none;
+        font-size: 14px;
+        font-family: var(--fonte-principal);
+        font-weight: 400;
+        color: var(--cinza-escuro);
+    }
+}
