--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -29,3 +29,19 @@
     font-weight: 700;
     font-size: 14px;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .tópicos__titulo {
+        font-size: 24px;
+    }
+
+    .tópicos__link {
+        font-size: 24px;
+        padding: 1em;
+    }
+
+    .tópicos__item {
+        margin: 2.5em 1.5em;
+    }
+}
